# kt_pedalInterface_fw

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
inc/: main.h  sysvars.h
src/: main.c  sysvars.c
